# home_sensor_network

./: .gitignore  .travis.yml  Pipfile  README.md  common.py  pylintrc  pyproject.toml  requirements.txt  sensors.py  settings_example.py  start_webgui.sh  weather_conditions.py  webgui.py
static/: styles.css
templates/: base.html  gauges.html  mean.html  plots.html  simple.html  table.html  weather.html  webgui.html
